@@ -125,6 +125,9 @@ namespace Jack
             case 'l' :
                 fPaDevices.DisplayDevicesNames();
                 break;
+            case 'q':
+                fQuality = param->value.ui;
+                break;
             }
         }
 
@@ -244,7 +247,7 @@ extern "C"
         strcpy(desc->name, "audioadapter");                            // size MUST be less then JACK_DRIVER_NAME_MAX + 1
         strcpy(desc->desc, "netjack audio <==> net backend adapter");  // size MUST be less then JACK_DRIVER_PARAM_DESC + 1
      
-        desc->nparams = 8;
+        desc->nparams = 9;
         desc->params = (jack_driver_param_desc_t*)calloc(desc->nparams, sizeof(jack_driver_param_desc_t));
 
         i = 0;
@@ -310,6 +313,14 @@ extern "C"
         desc->params[i].type = JackDriverParamBool;
         desc->params[i].value.i = TRUE;
         strcpy(desc->params[i].short_desc, "Display available PortAudio devices");
+        strcpy(desc->params[i].long_desc, desc->params[i].short_desc);
+        
+        i++;
+        strcpy(desc->params[i].name, "quality");
+        desc->params[i].character = 'q';
+        desc->params[i].type = JackDriverParamInt;
+        desc->params[i].value.ui = 0;
+        strcpy(desc->params[i].short_desc, "Resample algorithm quality (0 - 4)");
         strcpy(desc->params[i].long_desc, desc->params[i].short_desc);
 
         return desc;
